--- a/3-jednostki-miary-w-css/css/style.css
+++ b/3-jednostki-miary-w-css/css/style.css
@@ -1,4 +1,44 @@
-body {
-    background-color: pink;
+html {
+    font-size: 30px;
 }
 
+#container {
+    font-size: 30px;
+}
+
+#container > div {
+    background-color: rgba(0, 255, 255, 0.6);
+    margin-bottom: 15px;
+}
+
+#pixele {
+    width: 400px;
+}
+
+#em {
+    width: 20em;
+}
+
+#ex {
+    width: 20ex;
+}
+
+#rem {
+    width: 20rem;
+}
+
+#procenty {
+    width: 50%;
+}
+#vw {
+    width: 60vw;
+}
+#vh {
+    width: 60vh;
+}
+#vmin {
+    width: 60vmin;
+}
+#vmax {
+    width: 60vmax;
+}
